more static code analysis changes